; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/drivers_context/extr_opendingux_fbdev_ctx.c_gfx_ctx_opendingux_init.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/drivers_context/extr_opendingux_fbdev_ctx.c_gfx_ctx_opendingux_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EGL_DEFAULT_DISPLAY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*, i8*)* @gfx_ctx_opendingux_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @gfx_ctx_opendingux_init(i32* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = call i64 @calloc(i32 1, i32 1)
  %8 = inttoptr i64 %7 to i8*
  store i8* %8, i8** %6, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = icmp ne i8* %9, null
  br i1 %10, label %12, label %11

11:                                               ; preds = %2
  store i8* null, i8** %3, align 8
  br label %17

12:                                               ; preds = %2
  %13 = load i8*, i8** %6, align 8
  store i8* %13, i8** %3, align 8
  br label %17

14:                                               ; No predecessors!
  %15 = load i8*, i8** %6, align 8
  %16 = call i32 @gfx_ctx_opendingux_destroy(i8* %15)
  store i8* null, i8** %3, align 8
  br label %17

17:                                               ; preds = %14, %12, %11
  %18 = load i8*, i8** %3, align 8
  ret i8* %18
}

declare dso_local i64 @calloc(i32, i32) #1

declare dso_local i32 @gfx_ctx_opendingux_destroy(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
